Fix css styling glitches
1. crop overflow of images
2. Make image container be default 50% of the view port
3. Scale images to the correct aspect even if they're going to be cropped
4. Ensure that tile heights inside of container are always equal relative to eachother

--- a/react-app/src/components/activity/clickTile/Tile.scss
+++ b/react-app/src/components/activity/clickTile/Tile.scss
@@ -3,20 +3,22 @@
 .tile {
     margin: 1px;
     width: 100%;
+    height: 100%;
     background-color: $color-pure-black;
     display: inline-flex;
     .pictureSegment {
+        width: 50%;
+        overflow: hidden;
         @media screen and (orientation:portrait){
-            width: fit-content;
             img {
-                width: 30vw;
-                height: 100%;
+                width: 100%;
+                height: auto;
             }
         }
         @media screen and (orientation:landscape) {
             img {
-                width: auto;
-                height: 100%;
+                height: auto;
+                width: 100%;
             }
         }
         
